# ssh-agent-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  hardening_darwin.go  hardening_linux.go  hardening_other.go  main.go  main_test.go  prek.toml
.github/workflows/: ci.yml  lint.yml  release-drafter.yml  release.yml
assets/: icon.rc
cmd/ssh-agent-proxy/: hardening_other.go  hardening_windows.go  main.go  main_test.go  service_other.go  service_windows.go  source_agent.go  source_agent_test.go  source_agent_unix.go  source_agent_windows.go
contrib/systemd/: op-sign-proxy.service  ssh-agent-proxy.service
src/: agent.rs  agent_source.rs  autostart_windows.rs  bind_address_windows.rs  config.rs  dialer_unix.rs  dialer_windows.rs  hardening_linux.rs  hardening_macos.rs  hardening_windows.rs  main.rs  registry_windows.rs  server.rs  service_windows.rs  sshsig.rs  tray_windows.rs  wire.rs
tests/: integration.rs
wix/: ssh-agent-proxy.wxs
