[package]
name = "ssh-agent-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ssh-agent-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "resource", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_Security",
] }
windows-service = "0.7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rsa = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "std"] }
rand = "0.8"
signature = "2"
